some bugfixing on undo. looks like I may need to implement redux-undo after all. considering using offscreen canvas, regardless of compatibility issues. will have to test mem consumption.

--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,7 @@ body {
   line-height: 1;
   background: rgb(48, 48, 48);
   color: rgb(235, 235, 235);
+  font-family: "Roboto", sans-serif;
 }
 ol, ul {
 	list-style: none;
